<resources>
    <string name="app_name">CurrencyCalculatorApp</string>
    <string name="number_0">0</string>
    <string name="decimal_point">.</string>
    <string name="equals">=</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="all_clear">AC</string>
    <string name="delete">C</string>
    <string name="divisor">/</string>
    <string name="spinner_title">Select the currency you want to convert to</string>
    <string name="from_text">From</string>
    <string name="to_text">To</string>
</resources>